--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
 
 
 <div class="container-fluid mt-3" id="app">
-    <input type="text" class="form-control" v-model="criterioDeBusqueda"
-        placeholder="Ingresar un criterio de busqueda...">
+    <input type="text" class="form-control" v-model="criterioDeBusquedaNombreCompleto"
+        placeholder="Ingresar un nombre para buscar...">
+    <br>
+    <input type="text" class="form-control" v-model="criterioDeBusquedaDni"
+        placeholder="Ingresar un dni para buscar...">
+    <br>
+    <div class="alert alert-danger" role="alert" v-if="alertDni || alertNombre">
+        Escribiste menos de 3 caractéres en alguno de los filtros
+    </div>
     <br>
     <div class="card-deck m-0">
         <div class="row">
@@ -39,7 +46,8 @@
     new Vue({
         el: '#app',
         data: {
-            criterioDeBusqueda: '',
+            criterioDeBusquedaNombreCompleto: '',
+            criterioDeBusquedaDni: '',
             //Aquí, en este array es donde tienen que agregar su información
             personas: [
                 {
@@ -49,20 +57,50 @@
                     dni: "20442873"
                 },
                 {
-                    nombre: "...",
-                    apellido: "...",
-                    correo: "...",
-                    dni: "..."
+                    nombre: "Sacha",
+                    apellido: "Buengueroff",
+                    correo: "sachabuengue@gmail.com",
+                    dni: "40923577"
+                },
+                {
+                    nombre: "Julio",
+                    apellido: "Ortega",
+                    correo: "julioortega@gmail.com",
+                    dni: "20406114"
                 },
             ]
 
         },
         computed: {
-            personasFiltradas() {
+            personasFiltradasPorNombreCompleto() {
                 return this.personas.filter((persona) => {
-                    let registroCompleto = `${persona.nombre} ${persona.apellido} ${persona.dni} ${persona.correo}`
-                    return registroCompleto.toLowerCase().includes(this.criterioDeBusqueda.toLowerCase())
+                    let registroCompleto = `${persona.nombre} ${persona.apellido}`
+                    return registroCompleto.toLowerCase().includes(this.criterioDeBusquedaNombreCompleto.toLowerCase())
                 });
+            },
+            personasFiltradasPorDni() {
+                return this.personas.filter((persona) => {
+                    return persona.dni.includes(this.criterioDeBusquedaDni)
+                });
+            },
+            personasFiltradas() {
+                return this.personasFiltradasPorDni.filter((persona) => {
+                    return this.personasFiltradasPorNombreCompleto.includes(persona)
+                })
+            },
+            alertNombre() {
+                let result = false
+                if (this.criterioDeBusquedaNombreCompleto.length < 3 && this.criterioDeBusquedaNombreCompleto.length != "") {
+                    result = true
+                }
+                return result
+            },
+            alertDni() {
+                let result = false
+                if (this.criterioDeBusquedaDni.length < 3 && this.criterioDeBusquedaDni.length != "") {
+                    result = true
+                }
+                return result
             }
         },
         methods: {
